--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
                     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active d-flex flex-row justify-content-center">
-                                <img src="file:///C:/Users/Admin/Documents/GitHub/Ehsaas.github.io/static/food.jpg" class="d-block imagefirst" alt="...">
+                                <img src="static/food.jpg" class="d-block imagefirst" alt="...">
                             </div>
                             <div class="carousel-item d-flex flex-row justify-content-center">
                                 <img src="../static/study.jpg" class="d-block imagefirst" alt="...">
