--- a/home.html
+++ b/home.html
@@ -51,13 +51,13 @@
                                 <img src="static/food.jpg" class="d-block imagefirst" alt="...">
                             </div>
                             <div class="carousel-item d-flex flex-row justify-content-center">
-                                <img src="../static/study.jpg" class="d-block imagefirst" alt="...">
+                                <img src="static/study.jpg" class="d-block imagefirst" alt="...">
                             </div>
                             <div class="carousel-item d-flex flex-row justify-content-center">
-                                <img src="../static/tree.jpg" class="d-block imagefirst" alt="...">
+                                <img src="static/tree.jpg" class="d-block imagefirst" alt="...">
                             </div>
                             <div class="carousel-item d-flex flex-row justify-content-center">
-                                <img src="../static/water.jpg" class="d-block imagefirst" alt="...">
+                                <img src="static/water.jpg" class="d-block imagefirst" alt="...">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
