--- a/home.html
+++ b/home.html
@@ -48,10 +48,10 @@
                     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active d-flex flex-row justify-content-center">
-                                <img src="static/food.jpg" class="d-block imagefirst" alt="...">
+                                <img src="https://res.cloudinary.com/dccc2yce7/image/upload/v1648304238/food_sjkws3.jpg" class="d-block imagefirst" alt="...">
                             </div>
                             <div class="carousel-item d-flex flex-row justify-content-center">
-                                <img src="static/study.jpg" class="d-block imagefirst" alt="...">
+                                <img src="https://res.cloudinary.com/dccc2yce7/image/upload/v1648304287/study_g1gcb5.jpg" class="d-block imagefirst" alt="...">
                             </div>
                             <div class="carousel-item d-flex flex-row justify-content-center">
                                 <img src="static/tree.jpg" class="d-block imagefirst" alt="...">
