--- a/home.html
+++ b/home.html
@@ -48,16 +48,16 @@
                     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active d-flex flex-row justify-content-center">
-                                <img src="../static/food.jpg" class="d-block imagefirst" alt="...">
+                                <img src="https://res.cloudinary.com/dccc2yce7/image/upload/v1648304238/food_sjkws3.jpg" class="d-block imagefirst" alt="...">
                             </div>
                             <div class="carousel-item d-flex flex-row justify-content-center">
-                                <img src="../static/study.jpg" class="d-block imagefirst" alt="...">
+                                <img src="https://res.cloudinary.com/dccc2yce7/image/upload/v1648304287/study_g1gcb5.jpg" class="d-block imagefirst" alt="...">
                             </div>
                             <div class="carousel-item d-flex flex-row justify-content-center">
-                                <img src="../static/tree.jpg" class="d-block imagefirst" alt="...">
+                                <img src="https://res.cloudinary.com/dccc2yce7/image/upload/v1648304309/tree_mpjxik.jpg" class="d-block imagefirst" alt="...">
                             </div>
                             <div class="carousel-item d-flex flex-row justify-content-center">
-                                <img src="../static/water.jpg" class="d-block imagefirst" alt="...">
+                                <img src="https://res.cloudinary.com/dccc2yce7/image/upload/v1648304340/water_paqood.jpg" class="d-block imagefirst" alt="...">
                             </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
@@ -94,13 +94,13 @@
                         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="../static/foodforhungry.jpg" class="d-block w-100 imagefirst" alt="...">
+                                    <img src="https://res.cloudinary.com/dccc2yce7/image/upload/v1648304422/foodforhungry2_vnflyf.jpg" class="d-block w-100 imagefirst" alt="...">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="../static/foodforhungry2.jpg" class="d-block w-100 imagefirst" alt="...">
+                                    <img src="https://res.cloudinary.com/dccc2yce7/image/upload/v1648304428/foodforhungry_e4ndxh.jpg" class="d-block w-100 imagefirst" alt="...">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="../static/foodforhungry3.jpg" class="d-block w-100 imagefirst" alt="...">
+                                    <img src="https://res.cloudinary.com/dccc2yce7/image/upload/v1648304430/foodforhungry3_csijja.jpg" class="d-block w-100 imagefirst" alt="...">
                                 </div>
                             </div>
                             <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
