--- a/food.html
+++ b/food.html
@@ -56,13 +56,13 @@
                     </ol>
                     <div class="carousel-inner ">
                         <div class="carousel-item active ">
-                            <img src="../static/1.jpg" class="d-block imagefirst" alt="...">
+                            <img src="https://res.cloudinary.com/dccc2yce7/image/upload/v1648304428/foodforhungry_e4ndxh.jpg" class="d-block imagefirst" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="../static/2.jpg" class="d-block imagefirst" alt="...">
+                            <img src="https://res.cloudinary.com/dccc2yce7/image/upload/v1648304430/foodforhungry3_csijja.jpg" class="d-block imagefirst" alt="...">
                         </div>
                         <div class="carousel-item">
-                            <img src="../static/3.jpg" class="d-block imagefirst" alt="...">
+                            <img src="https://res.cloudinary.com/dccc2yce7/image/upload/v1648306110/1_yft48u.jpg" class="d-block imagefirst" alt="...">
                         </div>
                     </div>
                     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
