--- a/study.html
+++ b/study.html
@@ -46,7 +46,7 @@
         <div class="container-fluid foodsection">
             <div class="row">
                 <div class="col-12 imagebgcolor order-1">
-                    <img src="../static/study1.jpg" class="d-block w-100 imagefood" />
+                    <img src="https://res.cloudinary.com/dccc2yce7/image/upload/v1648306246/study1_e5avbs.jpg" class="d-block w-100 imagefood" />
                 </div>
                 <div class="col-12 imagebgcolor order-2 containerstudyimage">
                     <h1 class="mt-3 headtree">Mission Study</h1>
@@ -66,21 +66,21 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="../static/study2.jpg" class="d-block w-100 imagestudy" alt="...">
+                                <img src="https://res.cloudinary.com/dccc2yce7/image/upload/v1648306247/study2_txplql.jpg" class="d-block w-100 imagestudy" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Education for all</h5>
                                     <p>Every child has the right to study and we are on a mission to provide high class education to each and every child who cannot afford to study.</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="../static/study4.jpg" class="d-block w-100 imagestudy" alt="...">
+                                <img src="https://res.cloudinary.com/dccc2yce7/image/upload/v1648306249/study4_mljez4.jpg" class="d-block w-100 imagestudy" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Quality Education</h5>
                                     <p>With such great faculty and teaching methodologies, the environment provided to a child is well in good. All aimed to transform their lives into a better one.</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="../static/study5.jpg" class="d-block w-100 imagestudy" alt="...">
+                                <img src="https://res.cloudinary.com/dccc2yce7/image/upload/v1648306288/study5_exml6z.jpg" class="d-block w-100 imagestudy" alt="...">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Scholarship</h5>
                                     <p>We are dedicated towards providing quality education to the kids. With our various programs, we provide different level of scholarship to meritorious</p>
